--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
                 <div class="project-img">
                   <img src="/images/portfolio.jpg" alt="project"/>
                   <div class="project-link">
-                    <a href="https://github.com/sowlomon/TodoList-App" target="_blank">view code</a>
+                    <a href="https://sowlomon.github.io" target="_blank">view site</a>
                   </div>
                 </div>
                 <div class="project-info">
