made some updates

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title> PORTFOLIO</title>
+  <title>Solomon's Portofolio</title>
   <link href="/css/style.css" rel="stylesheet" type="text/css"/>
   <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
   <link href="/css/skins/pink.css" rel="stylesheet" type="text/css"/>
@@ -169,14 +169,14 @@
             <div class="project-item padd-15">
               <div class="project-item-inner shadow-dark">
                 <div class="project-img">
-                  <img src="/images/TodoList.jpg" alt="project"/>
+                  <img src="/images/cov-19pic.jpg" alt="project"/>
                   <div class="project-link">
-                    <a href="https://todo-list-data-app.netlify.app">view site</a>
+                    <a href="https://live-cov-19-tracker.netlify.app">view site</a>
                   </div>
                 </div>
                 <div class="project-info">
-                  <h4 class="project-title">ToDo-LIst App</h4>
-                  <p class="project-description">A todo-list app that enables one keep track of the list of tasks to be completed</p>
+                  <h4 class="project-title">Corana-Virus Tracker</h4>
+                  <p class="project-description">A web app that tracks corona virus cases around the countries of the world</p>
                   <p class="project-tag">Created with: <a href="#">REACT.JS</a> <a href="#">HTML</a> <a href="#">CSS</a></p>
                 </div>
               </div>
@@ -184,15 +184,15 @@
             <div class="project-item padd-15">
               <div class="project-item-inner shadow-dark">
                 <div class="project-img">
-                  <img src="/images/y-clone.jpg" alt="project"/>
+                  <img src="/images/TodoList.jpg" alt="project"/>
                   <div class="project-link">
-                    <a href="https://github.com/sowlomon/You-tube-clone">view code</a>
+                    <a href="https://https://todo-list-data-app.netlify.app">view code</a>
                   </div>
                 </div>
                 <div class="project-info">
-                  <h4 class="project-title">Youtube-Clone</h4>
-                  <p class="project-description">A youtube clone website{I low budget youtube]</p>
-                  <p class="project-tag">Created with: <a href="#">HTML</a> <a href="#">CSS</p>
+                  <h4 class="project-title">TodoList App</h4>
+                  <p class="project-description">A todo list app that keeps tracks of tasks to be accomplished</p>
+                  <p class="project-tag">Created with: <a href="#">HTML</a> <a href="#">CSS <a href="#">REACT.JS</p>
                 </div>
               </div>
             </div>
@@ -214,30 +214,30 @@
             <div class="project-item padd-15">
               <div class="project-item-inner shadow-dark">
                 <div class="project-img">
-                  <img src="/images/netflex-clone.jpg" alt="project"/>
+                  <img src="/images/portfolio.jpg" alt="project"/>
                   <div class="project-link">
-                    <a href="https://github.com/sowlomon/Netflix-clone">view code</a>
+                    <a href="https://sowlomon.github.io">view site</a>
                   </div>
                 </div>
                 <div class="project-info">
-                  <h4 class="project-title">Netflix-Clone</h4> 
-                  <p class="project-description">Netflix cloned website[low budget netflix]</p>
-                  <p class="project-tag">Created with: <a href="#">HTML</a> <a href="#">CSS</a></p>
+                  <h4 class="project-title">My-Portfolio</h4> 
+                  <p class="project-description">My personal portfolio site</p>
+                  <p class="project-tag">Created with: <a href="#">HTML</a> <a href="#">CSS</a> <a href="#">JAVASCRIPT</a></p>
                 </div>
               </div>
             </div>
             <div class="project-item padd-15">
               <div class="project-item-inner shadow-dark">
                 <div class="project-img">
-                  <img src="/images/portfolio.jpg" alt="project"/>
+                  <img src="/images/netflex-clone.jpg" alt="project"/>
                   <div class="project-link">
-                    <a href="https://sowlomon.github.io" target="_blank">view site</a>
+                    <a href="https://netflix-clone-web.netlify.app" target="_blank">view site</a>
                   </div>
                 </div>
                 <div class="project-info">
-                  <h4 class="project-title">My-Portfolio</h4>
-                  <p class="project-description">My personal portfolio site</p>
-                  <p class="project-tag">Created with: <a href="#">JAVASCRIPT</a> <a href="#">HTML</a> <a href="#">CSS</a></p>
+                  <h4 class="project-title">Netflix Clone</h4>
+                  <p class="project-description">A simple netflix clone web page</p>
+                  <p class="project-tag">Created with:  <a href="#">HTML</a> <a href="#">CSS</a></p>
                 </div>
               </div>
             </div>
