--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       <section class="home-sec section active" id="home">
         <div class="container">
           <div class="intro">
-            <img src="/images/soli.JPG" alt="profile" class="shadow-dark" style="height:200px"/>
+            <img src="/images/sol.JPG" alt="profile" class="shadow-dark" style="height:200px"/>
             <h1>Hi there 👋 I'm Solomon Adache</h1>
             <p> A frontEnd web developer who specializes in
                the development of high quality web applications
