--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                 <div class="project-img">
                   <img src="/images/TodoList.jpg" alt="project"/>
                   <div class="project-link">
-                    <a href="https://https://todo-list-data-app.netlify.app">view code</a>
+                    <a href="https://todo-list-data-app.netlify.app">view code</a>
                   </div>
                 </div>
                 <div class="project-info">
