made some updates

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       <section class="home-sec section active" id="home">
         <div class="container">
           <div class="intro">
-            <img src="/images/sol.JPG" alt="profile" class="shadow-dark" style="height:200px"/>
+            <img src="/images/solo.JPG" alt="profile" class="shadow-dark" style="height:200px"/>
             <h1>Hi there 👋 I'm Solomon Adache</h1>
             <p> A frontEnd web developer who specializes in
                the development of high quality web applications
@@ -199,14 +199,14 @@
             <div class="project-item padd-15">
               <div class="project-item-inner">
                 <div class="project-img">
-                  <img src="/images/calculate.jpg" alt="project"/>
+                  <img src="/images/about.jpg" alt="project"/>
                   <div class="project-link">
-                    <a href="https://github.com/sowlomon/Solo-Calc">view code</a>
+                    <a href="https://objective-tesla-6a93c3.netlify.app" target="_blank">view site</a>
                   </div>
                 </div>
                 <div class="project-info">
-                  <h4 class="project-title">Solo-Calc</h4>
-                  <p class="project-description">An app that enables you calculate numbers using different operations</p>
+                  <h4 class="project-title">School Finder[Group project]</h4>
+                  <p class="project-description">A web app that allows students find the school of their choice</p>
                   <p class="project-tag">Created with: <a href="#">JAVASCRIPT</a> <a href="#">HTML</a> <a href="#">CSS</a></p>
                 </div>
               </div>
@@ -226,21 +226,7 @@
                 </div>
               </div>
             </div>
-            <div class="project-item padd-15">
-              <div class="project-item-inner shadow-dark">
-                <div class="project-img">
-                  <img src="/images/netflex-clone.jpg" alt="project"/>
-                  <div class="project-link">
-                    <a href="https://netflix-clone-web.netlify.app" target="_blank">view site</a>
-                  </div>
-                </div>
-                <div class="project-info">
-                  <h4 class="project-title">Netflix Clone</h4>
-                  <p class="project-description">A simple netflix clone web page</p>
-                  <p class="project-tag">Created with:  <a href="#">HTML</a> <a href="#">CSS</a></p>
-                </div>
-              </div>
-            </div>
+    
           </div>
         </div>
       </section> 
