--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <h1>Hi there 👋 I'm Solomon Adache</h1>
             <p> A frontEnd web developer who specializes in
                the development of high quality web applications
-              using my knowledge in Html, Css and React.js framework.
+              using my knowledge in <b>React.js,Javascript, Html and css</b>.
               I am always ready to collaborate with ambitious teams on projects
               that would create an impact.
             </p>
@@ -98,7 +98,7 @@
                 </div>
                 <div class="row">
                   <div class="buttons padd-15">
-                    <a href="#contact" data-section-index="1" class="btn hire-me">Hire Me</a>
+                    <a href="https://drive.google.com/file/d/17rI0zmStMAfheDGlQvEHiA13uetV_I05/view?usp=sharing" data-section-index="1"  target = "_blank" class="btn hire-me">Download My Cv</a>
                   </div>
                 </div>
               </div>
@@ -118,6 +118,18 @@
           <div class="row">
             <div class="skill-item padd-15">
               <div class="skill-item-inner">
+                <div class="icon"><i class="fab fa-react"></i></div>
+                <h4>REACT</h4>
+              </div>
+            </div>
+            <div class="skill-item padd-15">
+              <div class="skill-item-inner">
+                <div class="icon"><i class="fab fa-js-square"></i></div>
+                <h4>JAVASCRIPT</h4>
+              </div>
+            </div>
+            <div class="skill-item padd-15">
+              <div class="skill-item-inner">
                 <div class="icon"><i class="fab fa-html5"></i></div>
                 <h4>HTML5</h4>
               </div>
@@ -129,18 +141,6 @@
               </div>
             </div>
             <br>
-            <div class="skill-item padd-15">
-              <div class="skill-item-inner">
-                <div class="icon"><i class="fab fa-js-square"></i></div>
-                <h4>JAVASCRIPT</h4>
-              </div>
-            </div>
-            <div class="skill-item padd-15">
-              <div class="skill-item-inner">
-                <div class="icon"><i class="fab fa-react"></i></div>
-                <h4>REACT</h4>
-              </div>
-            </div>
             <div class="skill-item padd-15">
               <div class="skill-item-inner">
                 <div class="icon"><i class="fab fa-git-square"></i></div>
@@ -186,12 +186,12 @@
                 <div class="project-img">
                   <img src="/images/TodoList.jpg" alt="project"/>
                   <div class="project-link">
-                    <a href="https://todo-list-data-app.netlify.app">view code</a>
+                    <a href="https://todo-list-data-app.netlify.app">view site</a>
                   </div>
                 </div>
                 <div class="project-info">
                   <h4 class="project-title">TodoList App</h4>
-                  <p class="project-description">A todo list app that keeps tracks of tasks to be accomplished</p>
+                  <p class="project-description">A todo list app was built with React.Its a web app that keeps tracks of tasks to be accomplished</p>
                   <p class="project-tag">Created with: <a href="#">HTML</a> <a href="#">CSS <a href="#">REACT.JS</p>
                 </div>
               </div>
@@ -206,7 +206,7 @@
                 </div>
                 <div class="project-info">
                   <h4 class="project-title">School Finder[Group project]</h4>
-                  <p class="project-description">A web app that allows students find the school of their choice</p>
+                  <p class="project-description">I co-lead a team in which we built a web application that allows student find the school of their dreams.</p>
                   <p class="project-tag">Created with: <a href="#">JAVASCRIPT</a> <a href="#">HTML</a> <a href="#">CSS</a></p>
                 </div>
               </div>
