--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <li><a href="#contact"><i class="fa fa-comment"></i>Contact</a></li>
       </ul>
       <div class="copyright-text">
-        &copy; 2021 My Portfolio
+        &copy; 2021 Built by Code_snipah
       </div>
       </div>
     </div>
