remove what wasn't needed

--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
           <div class="intro">
             <img src="/images/solo.JPG" alt="profile" class="shadow-dark" style="height:200px"/>
             <h1>Hi there 👋 I'm Solomon Adache</h1>
-            <p> A frontEnd web developer who specializes in
+            <p> A frontEnd web developer, who specializes in
                the development of high quality web applications
               using my knowledge in <b>React.js,Javascript, Html and css</b>.
-              I am always ready to collaborate with ambitious teams on projects
+              I am always ready to collaborate with ambitious teams to work  on projects
               that would create an impact.
             </p>
             <div class="social-link">
@@ -82,16 +82,16 @@
                 <div class="about-text padd-15">
                   <h3>Hi 👨 I'm a <span >FrontEnd Dev Guy </span></h3>
                   <p> Who is passionate about web development
-                     and AI. I am currently studying computer Engineering
+                     and AI. I am currently studying computer Engineering,
                     with the aim of becoming a software engineer. I love the process involving how 
                     softwares are built and love to take part in creative processes, working with teams and 
                     also looking for opportunities to learn new technologies.
                      I strongly believe that with the skills and knowledge i have 
-                     acquired i can collaborate to make projects successful. </p>
-                     <p>During my free time i write articles, play football or watch movies.Also
+                     acquired, i can collaborate to make projects successful. </p>
+                     <p>During my free time i write articles, play football or watch movies.You can also
                        you can find me reading books during this period.
                      </p>
-                     <p>I am currently learning the react.js frame work, but, also looking for opportunities
+                     <p>I am currently learning the react.js frame work, but also looking for opportunities
                        where i can collaborate with positive and passionate people to bring ambitious 
                        projects to life.
                      </p>
@@ -178,21 +178,6 @@
                   <h4 class="project-title">Corana-Virus Tracker</h4>
                   <p class="project-description">A web app that tracks corona virus cases around the countries of the world</p>
                   <p class="project-tag">Created with: <a href="#">REACT.JS</a> <a href="#">HTML</a> <a href="#">CSS</a></p>
-                </div>
-              </div>
-            </div>
-            <div class="project-item padd-15">
-              <div class="project-item-inner shadow-dark">
-                <div class="project-img">
-                  <img src="/images/TodoList.jpg" alt="project"/>
-                  <div class="project-link">
-                    <a href="https://todo-list-data-app.netlify.app">view site</a>
-                  </div>
-                </div>
-                <div class="project-info">
-                  <h4 class="project-title">TodoList App</h4>
-                  <p class="project-description">A todo list app was built with React.Its a web app that keeps tracks of tasks to be accomplished</p>
-                  <p class="project-tag">Created with: <a href="#">HTML</a> <a href="#">CSS <a href="#">REACT.JS</p>
                 </div>
               </div>
             </div>
