--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                 </div>
                 <div class="project-info">
                   <h4 class="project-title">School Finder[Group project]</h4>
-                  <p class="project-description">I co-lead a team in which we built a web application that allows student find the school of their dreams.</p>
+                  <p class="project-description">I co-lead a team in which we built a web application that allows students  schools base on their preferences.</p>
                   <p class="project-tag">Created with: <a href="#">JAVASCRIPT</a> <a href="#">HTML</a> <a href="#">CSS</a></p>
                 </div>
               </div>
