--- a/index.html
+++ b/index.html
@@ -88,10 +88,9 @@
                     also looking for opportunities to learn new technologies.
                      I strongly believe that with the skills and knowledge i have 
                      acquired, i can collaborate to make projects successful. </p>
-                     <p>During my free time i write articles, play football or watch movies.You can also
-                       you can find me reading books during this period.
+                     <p>During my free time, i write articles, play football or watch movies.
                      </p>
-                     <p>I am currently learning the react.js frame work, but also looking for opportunities
+                     <p>I am currently learning react.js   but also looking for opportunities
                        where i can collaborate with positive and passionate people to bring ambitious 
                        projects to life.
                      </p>
