--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <li><a href="#contact"><i class="fa fa-comment"></i>Contact</a></li>
       </ul>
       <div class="copyright-text">
-        &copy; 2021 Built by Code_snipah
+        &copy; 2022 Built by Code_snipah
       </div>
       </div>
     </div>
@@ -82,15 +82,14 @@
                 <div class="about-text padd-15">
                   <h3>Hi 👨 I'm a <span >FrontEnd Dev Guy </span></h3>
                   <p> Who is passionate about web development
-                     and AI. I am currently studying computer Engineering,
-                    with the aim of becoming a software engineer. I love the process involving how 
+                     and AI. I am graduate of computer Engineering. I love the process involving how 
                     softwares are built and love to take part in creative processes, working with teams and 
                     also looking for opportunities to learn new technologies.
                      I strongly believe that with the skills and knowledge i have 
                      acquired, i can collaborate to make projects successful. </p>
                      <p>During my free time, i write articles, play football or watch movies.
                      </p>
-                     <p>I am currently learning react.js   but also looking for opportunities
+                     <p>I am currently learning node.js and solidiity   but also looking for opportunities
                        where i can collaborate with positive and passionate people to bring ambitious 
                        projects to life.
                      </p>
