add new project

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                 </div>
                 <div class="row">
                   <div class="buttons padd-15">
-                    <a href="https://drive.google.com/file/d/1qb4engGXGuUTxJhC78e_wMitCAE1yTjh/view?usp=sharing" data-section-index="1"  target = "_blank" class="btn hire-me">Download My Cv</a>
+                    <a href="https://drive.google.com/file/d/1-f25tEMdFEPOddZBYZdUGg-kaYLdLIn3/view?usp=sharing" data-section-index="1"  target = "_blank" class="btn hire-me">Download My Cv</a>
                   </div>
                 </div>
               </div>
@@ -191,6 +191,21 @@
                   <h4 class="project-title">School Finder[Group project]</h4>
                   <p class="project-description">I co-lead a team in which we built a web application that allows students find  schools base on their preferences.</p>
                   <p class="project-tag">Created with: <a href="#">JAVASCRIPT</a> <a href="#">HTML</a> <a href="#">CSS</a></p>
+                </div>
+              </div>
+            </div>
+            <div class="project-item padd-15">
+              <div class="project-item-inner">
+                <div class="project-img">
+                  <img src="/images/webBesNik.jpg" alt="project"/>
+                  <div class="project-link">
+                    <a href="http://fifth-update.vercel.app" target="_blank">view site</a>
+                  </div>
+                </div>
+                <div class="project-info">
+                  <h4 class="project-title">Besnik</h4>
+                  <p class="project-description">A simple static website template for a bank built with next.js</p>
+                  <p class="project-tag">Created with: <a href="#">NEXT.JS</a><a href="#">SCSS</a></p>
                 </div>
               </div>
             </div>
