--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
             <div class="project-item padd-15">
               <div class="project-item-inner">
                 <div class="project-img">
-                  <img src="/images/webBesNik.jpg" alt="project"/>
+                  <img src="/images/bes.jpg" alt="project"/>
                   <div class="project-link">
                     <a href="http://fifth-update.vercel.app" target="_blank">view site</a>
                   </div>
@@ -205,7 +205,7 @@
                 <div class="project-info">
                   <h4 class="project-title">Besnik</h4>
                   <p class="project-description">A simple static website template for a bank built with next.js</p>
-                  <p class="project-tag">Created with: <a href="#">NEXT.JS</a><a href="#">SCSS</a></p>
+                  <p class="project-tag">Created with: <a href="#">NEXT.JS</a> <a href="#"> SCSS</a></p>
                 </div>
               </div>
             </div>
