--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                   </div>
                 </div>
                 <div class="project-info">
-                  <h4 class="project-title">Besnik</h4>
+                  <h4 class="project-title">BesNik</h4>
                   <p class="project-description">A simple static website template for a bank built with next.js</p>
                   <p class="project-tag">Created with: <a href="#">NEXT.JS</a> <a href="#"> SCSS</a></p>
                 </div>
