made a few updates on my portifolio

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <li><a href="#contact"><i class="fa fa-comment"></i>Contact</a></li>
       </ul>
       <div class="copyright-text">
-        &copy; 2022 Built by Code_snipah
+        &copy; 2023 Built by Code_snipah
       </div>
       </div>
     </div>
@@ -52,10 +52,10 @@
           <div class="intro">
             <img src="/images/solo.JPG" alt="profile" class="shadow-dark" style="height:200px"/>
             <h1>Hi there 👋 I'm Solomon Adache</h1>
-            <p> A frontEnd web developer, who specializes in
+            <p> A software engineer, who specializes in
                the development of high quality web applications
-              using my knowledge in <b>React.js,Javascript, Html and css</b>.
-              I am always ready to collaborate with ambitious teams to work  on projects
+              using my knowledge in <b>React, Next, Node, Javascript, Html and css</b>.
+              I am always ready to collaborate with ambitious teams to work on projects
               that would create an impact.
             </p>
             <div class="social-link">
@@ -80,7 +80,7 @@
             <div class="about-content padd-15">
               <div class="row">
                 <div class="about-text padd-15">
-                  <h3>Hi 👨 I'm a <span >FrontEnd Dev Guy </span></h3>
+                  <h3>Hi 👨 I'm a <span >Software Engineer,</span></h3>
                   <p> Who is passionate about web development
                      and AI. I am graduate of computer Engineering. I love the process involving how 
                     softwares are built and love to take part in creative processes, working with teams and 
@@ -89,7 +89,7 @@
                      acquired, i can collaborate to make projects successful. </p>
                      <p>During my free time, i write articles, play football or watch movies.
                      </p>
-                     <p>I am currently learning node.js and solidiity   but also looking for opportunities
+                     <p>I am currently learning node.js and solidiity but also looking for opportunities
                        where i can collaborate with positive and passionate people to bring ambitious 
                        projects to life.
                      </p>
@@ -118,6 +118,18 @@
               <div class="skill-item-inner">
                 <div class="icon"><i class="fab fa-react"></i></div>
                 <h4>REACT</h4>
+              </div>
+            </div>
+            <div class="skill-item padd-15">
+              <div class="skill-item-inner">
+                <div class="icon"><i class="fab fa-react"></i></div>
+                <h4>NEXT JS</h4>
+              </div>
+            </div>
+            <div class="skill-item padd-15">
+              <div class="skill-item-inner">
+                <div class="icon"><i class="fab fa-node"></i></div>
+                <h4>NODE JS</h4>
               </div>
             </div>
             <div class="skill-item padd-15">
@@ -304,11 +316,11 @@
     </ul>
     <h5>Body Skin</h5>
     <label>
-      <input type="radio"  class= "body-skin" name="body-style" value="light" checked="true">
+      <input type="radio"  class= "body-skin" name="body-style" value="light" >
       light
     </label>
     <label>
-      <input type="radio"  class= "body-skin" name="body-style" value="dark">
+      <input type="radio"  class= "body-skin" name="body-style" value="dark" checked="true">
       dark
     </label>
   </div>
